chore: upgrade to Java 21
Closes: MODKBEKBJ-778